--- a/.github/workflows/infrastructure-pull.yml
+++ b/.github/workflows/infrastructure-pull.yml
@@ -72,6 +72,15 @@ jobs:
           <details><summary>Show Plan</summary>
           ${process.env.PLAN}
           </details>
+
+          *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+          
+          github.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: output
+          })
     - name: Terraform Status
       if: steps.fmt.outcome == 'failure' || steps.lint.outcome == 'failure' || steps.init.outcome == 'failure' || steps.plan.outcome == 'failure'
       run: exit 1
