add permisson for github workflow

--- a/.github/workflows/infrastructure-pull.yml
+++ b/.github/workflows/infrastructure-pull.yml
@@ -1,7 +1,9 @@
 name: infrastructure_pull
 permissions: 
   id-token: write
-  contents: read 
+  contents: read
+  issues: write
+  pull-requests: write
 on: 
   pull_request: 
     branches: 
@@ -74,7 +76,7 @@ jobs:
           </details>
 
           *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-          
+
           github.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
