--- a/.github/workflows/infrastructure-pull.yml
+++ b/.github/workflows/infrastructure-pull.yml
@@ -66,7 +66,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const output = `### MSK Cluster Terraform
+          const output = `### Terraform Infrastructure auto-generated comment
           #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
           #### Terraform Linting 🔧\`${{ steps.lint.outcome }}\`
           #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
